corrected table colors for dark mode

--- a/assets/sass/_dark-style.sass
+++ b/assets/sass/_dark-style.sass
@@ -13,3 +13,16 @@
 
 .modal-close
     background-color: $primary
+    
+.markdown
+    td, th 
+        padding: .25rem .5rem
+        border: 1px solid #e5e5e5
+        text-align: center
+        background-color: #878787
+    tbody tr:nth-child(odd) td,
+    tbody tr:nth-child(odd) th
+        background-color: darken(#878787, 10%)
+    tbody tr:nth-child(even) td,
+    tbody tr:nth-child(even) th
+        background-color: #878787
